[package]
name = "eza"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.38.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cacao = { git = "https://github.com/eza-rs/cacao" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gtk = "0.15.5"
